--- a/server_www/css/styles.css
+++ b/server_www/css/styles.css
@@ -80,7 +80,10 @@ padding:1em;*/
 
 #historical_data_tab
 {
-	   height:100%;
-    width:100%;
+	/*height:90%;
+    width:95%;
     position:absolute;
+    border:1px red solid;
+    padding:1em;*/
 }
+
